Moved monitoring code inside a new module, and used a more modern random-choice method.
